...
    required this.onClearSearch,
  });

  @override
  Widget build(BuildContext context) {
    return Center(
      key: const Key('tenant_no_search_results'),
      child: Column(
        mainAxisAlignment: MainAxisAlignment.center,
        crossAxisAlignment: CrossAxisAlignment.center,
        children: [
          Icon(
            Icons.search_off_outlined,
...
